@@ -4,6 +4,7 @@ import org.flywaydb.core.internal.database.base.Schema;
 import org.flywaydb.core.internal.jdbc.JdbcTemplate;
 
 import java.sql.SQLException;
+import java.util.ArrayList;
 import java.util.List;
 
 public class DuckDBSchema extends Schema<DuckDBDatabase, DuckDBTable> {
@@ -14,13 +15,13 @@ public class DuckDBSchema extends Schema<DuckDBDatabase, DuckDBTable> {
 
     @Override
     protected boolean doExists() throws SQLException {
-        final var countSchemasWithName = "SELECT COUNT(*) FROM information_schema.schemata WHERE schema_name = ?";
+        String countSchemasWithName = "SELECT COUNT(*) FROM information_schema.schemata WHERE schema_name = ?";
         return jdbcTemplate.queryForInt(countSchemasWithName, name) > 0;
     }
 
     @Override
     protected boolean doEmpty() throws SQLException {
-        final var countTablesInSchema = "SELECT count(*) from information_schema.tables WHERE table_schema = ?";
+        String countTablesInSchema = "SELECT count(*) from information_schema.tables WHERE table_schema = ?";
         return jdbcTemplate.queryForInt(countTablesInSchema, name) == 0;
     }
 
@@ -44,10 +45,12 @@ public class DuckDBSchema extends Schema<DuckDBDatabase, DuckDBTable> {
 
     @Override
     protected DuckDBTable[] doAllTables() throws SQLException {
-        return getAllTablesNames().stream()
-            .map(this::getTable)
-            .toList()
-            .toArray(new DuckDBTable[]{});
+        List<String> allTableNames = getAllTablesNames();
+        List<DuckDBTable> tables = new ArrayList<>();
+        for (String tableName : allTableNames) {
+            tables.add(getTable(tableName));
+        }
+        return tables.toArray(new DuckDBTable[0]);
     }
 
     @Override
@@ -56,18 +59,19 @@ public class DuckDBSchema extends Schema<DuckDBDatabase, DuckDBTable> {
     }
 
     private void dropAll(String objectType, List<String> objectsNames) throws SQLException {
-        for (final var objectName : objectsNames) {
-            jdbcTemplate.execute("DROP %s %s.%s CASCADE".formatted(objectType, database.quote(name), database.quote(objectName)));
+        for (String objectName : objectsNames) {
+            String sql = String.format("DROP %s %s.%s CASCADE", objectType, database.quote(name), database.quote(objectName));
+            jdbcTemplate.execute(sql);
         }
     }
 
     private List<String> getAllMacros() throws SQLException {
-        final var sql = "SELECT function_name FROM duckdb_functions() WHERE NOT internal AND schema_name = ?";
+        String sql = "SELECT function_name FROM duckdb_functions() WHERE NOT internal AND schema_name = ?";
         return jdbcTemplate.queryForStringList(sql, name);
     }
 
     private List<String> getAllViews() throws SQLException {
-        final var sql = "SELECT view_name FROM duckdb_views() WHERE NOT internal AND schema_name = ?";
+        String sql = "SELECT view_name FROM duckdb_views() WHERE NOT internal AND schema_name = ?";
         return jdbcTemplate.queryForStringList(sql, name);
     }
 
@@ -76,7 +80,7 @@ public class DuckDBSchema extends Schema<DuckDBDatabase, DuckDBTable> {
     }
 
     private List<String> getAllObjectsNames(String catalogNameField, String catalogTable) throws SQLException {
-        final var sql = "SELECT %s FROM %s WHERE schema_name = ?".formatted(catalogNameField, catalogTable);
+        String sql = String.format("SELECT %s FROM %s WHERE schema_name = ?", catalogNameField, catalogTable);
         return jdbcTemplate.queryForStringList(sql, name);
     }
 }
